* (bug 11325) Wrapped page titles in MonoBook skin spaced more nicely

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -258,6 +258,8 @@ span.subpages {
 }
 .firstHeading {
 	margin-bottom: .1em;
+	line-height: 1.2em;
+	padding-bottom: 0;
 }
 
 /* user notification thing */
